changing column names for quarter_slice

--- a/greenbook.ipynb
+++ b/greenbook.ipynb
@@ -318,11 +318,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "quarter_slice.to_csv('quarter_slice.csv')"
+    "quarter_slice.to_csv('quarter_slice.csv', index=False)"
    ]
   },
   {
