--- a/greenbook.ipynb
+++ b/greenbook.ipynb
@@ -229,18 +229,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "quarter = '2001Q2'\n",
     "\n",
-    "quarter_slice = full_data[['Date', quarter]].dropna().reset_index(drop=True)"
+    "quarter_slice = full_data[['Date', quarter]].dropna().reset_index(drop=True)\n",
+    "quarter_slice.columns = ['Date', 'Data']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +266,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Date</th>\n",
-       "      <th>2001Q2</th>\n",
+       "      <th>Data</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -299,15 +300,15 @@
        "</div>"
       ],
       "text/plain": [
-       "       Date  2001Q2\n",
-       "0   6/30/02     3.6\n",
-       "1   3/31/02     3.1\n",
-       "2  12/31/01     2.6\n",
-       "3   9/30/01     2.0\n",
-       "4   6/30/01     1.2"
+       "       Date  Data\n",
+       "0   6/30/02   3.6\n",
+       "1   3/31/02   3.1\n",
+       "2  12/31/01   2.6\n",
+       "3   9/30/01   2.0\n",
+       "4   6/30/01   1.2"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +331,26 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "load(\"http.star\", \"http\")\n",
+    "load(\"encoding/csv.star\", \"csv\")\n",
+    "load(\"zipfile.star\", \"ZipFile\")\n",
+    "load(\"qri.star\", \"qri\")\n",
+    "\n",
+    "def download(ctx):\n",
+    "    # perform an HTTP GET request to greenbook data I have saved on github\n",
+    "    res = http.get(\"https://raw.githubusercontent.com/charleyferrari/greenbook/master/quarter_slice.csv\")\n",
+    "    return res.body()\n",
+    "\n",
+    "def transform(ds, ctx):\n",
+    "    rawCsvData = ctx.download\n",
+    "\n",
+    "    parsedCsv = csv.read_all(rawCsvData, lazy_quotes=True, fields_per_record=-1)\n",
+    "\n",
+    "    csvString = csv.write_all(parsedCsv)\n",
+    "\n",
+    "    ds.set_body(csvString, raw=True, data_format='csv')"
+   ]
   }
  ],
  "metadata": {
