--- a/greenbook.ipynb
+++ b/greenbook.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,220 +20,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Date</th>\n",
-       "      <th>2019Q2</th>\n",
-       "      <th>2019Q1</th>\n",
-       "      <th>2018Q4</th>\n",
-       "      <th>2018Q3</th>\n",
-       "      <th>2018Q2</th>\n",
-       "      <th>2018Q1</th>\n",
-       "      <th>2017Q4</th>\n",
-       "      <th>2017Q3</th>\n",
-       "      <th>2017Q2</th>\n",
-       "      <th>...</th>\n",
-       "      <th>2003Q3</th>\n",
-       "      <th>2003Q2</th>\n",
-       "      <th>2003Q1</th>\n",
-       "      <th>2002Q4</th>\n",
-       "      <th>2002Q3</th>\n",
-       "      <th>2002Q2</th>\n",
-       "      <th>2002Q1</th>\n",
-       "      <th>2001Q4</th>\n",
-       "      <th>2001Q3</th>\n",
-       "      <th>2001Q2</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>6/30/20</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>3/31/20</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>12/31/19</td>\n",
-       "      <td>2.2</td>\n",
-       "      <td>2.2</td>\n",
-       "      <td>2.2</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>9/30/19</td>\n",
-       "      <td>2.1</td>\n",
-       "      <td>2.2</td>\n",
-       "      <td>2.4</td>\n",
-       "      <td>2.6</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>6/30/19</td>\n",
-       "      <td>1.9</td>\n",
-       "      <td>2.4</td>\n",
-       "      <td>2.7</td>\n",
-       "      <td>2.7</td>\n",
-       "      <td>2.6</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 74 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "       Date  2019Q2  2019Q1  2018Q4  2018Q3  2018Q2  2018Q1  2017Q4  2017Q3  \\\n",
-       "0   6/30/20     1.7     NaN     NaN     NaN     NaN     NaN     NaN     NaN   \n",
-       "1   3/31/20     2.0     2.1     NaN     NaN     NaN     NaN     NaN     NaN   \n",
-       "2  12/31/19     2.2     2.2     2.2     NaN     NaN     NaN     NaN     NaN   \n",
-       "3   9/30/19     2.1     2.2     2.4     2.6     NaN     NaN     NaN     NaN   \n",
-       "4   6/30/19     1.9     2.4     2.7     2.7     2.6     NaN     NaN     NaN   \n",
-       "\n",
-       "   2017Q2   ...    2003Q3  2003Q2  2003Q1  2002Q4  2002Q3  2002Q2  2002Q1  \\\n",
-       "0     NaN   ...       NaN     NaN     NaN     NaN     NaN     NaN     NaN   \n",
-       "1     NaN   ...       NaN     NaN     NaN     NaN     NaN     NaN     NaN   \n",
-       "2     NaN   ...       NaN     NaN     NaN     NaN     NaN     NaN     NaN   \n",
-       "3     NaN   ...       NaN     NaN     NaN     NaN     NaN     NaN     NaN   \n",
-       "4     NaN   ...       NaN     NaN     NaN     NaN     NaN     NaN     NaN   \n",
-       "\n",
-       "   2001Q4  2001Q3  2001Q2  \n",
-       "0     NaN     NaN     NaN  \n",
-       "1     NaN     NaN     NaN  \n",
-       "2     NaN     NaN     NaN  \n",
-       "3     NaN     NaN     NaN  \n",
-       "4     NaN     NaN     NaN  \n",
-       "\n",
-       "[5 rows x 74 columns]"
+       "Index(['Date', '2019Q2', '2019Q1', '2018Q4', '2018Q3', '2018Q2', '2018Q1',\n",
+       "       '2017Q4', '2017Q3', '2017Q2', '2017Q1', '2016Q4', '2016Q3', '2016Q2',\n",
+       "       '2016Q1', '2015Q4', '2015Q3', '2015Q2', '2015Q1', '2014Q4', '2014Q3',\n",
+       "       '2014Q2', '2014Q1', '2013Q4', '2013Q3', '2013Q2', '2013Q1', '2012Q4',\n",
+       "       '2012Q3', '2012Q2', '2012Q1', '2011Q4', '2011Q3', '2011Q2', '2011Q1',\n",
+       "       '2010Q4', '2010Q3', '2010Q2', '2010Q1', '2009Q4', '2009Q3', '2009Q2',\n",
+       "       '2009Q1', '2008Q4', '2008Q3', '2008Q2', '2008Q1', '2007Q4', '2007Q3',\n",
+       "       '2007Q2', '2007Q1', '2006Q4', '2006Q3', '2006Q2', '2006Q1', '2005Q4',\n",
+       "       '2005Q3', '2005Q2', '2005Q1', '2004Q4', '2004Q3', '2004Q2', '2004Q1',\n",
+       "       '2003Q4', '2003Q3', '2003Q2', '2003Q1', '2002Q4', '2002Q3', '2002Q2',\n",
+       "       '2002Q1', '2001Q4', '2001Q3', '2001Q2'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "full_data.head()"
+    "full_data.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "quarter = '2001Q2'\n",
+    "quarter = '2001Q3'\n",
     "\n",
     "quarter_slice = full_data[['Date', quarter]].dropna().reset_index(drop=True)\n",
     "quarter_slice.columns = ['Date', 'Data']"
@@ -241,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -272,27 +94,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>6/30/02</td>\n",
-       "      <td>3.6</td>\n",
+       "      <td>9/30/02</td>\n",
+       "      <td>3.9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>3/31/02</td>\n",
-       "      <td>3.1</td>\n",
+       "      <td>6/30/02</td>\n",
+       "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>12/31/01</td>\n",
-       "      <td>2.6</td>\n",
+       "      <td>3/31/02</td>\n",
+       "      <td>2.7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>9/30/01</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>12/31/01</td>\n",
+       "      <td>2.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>6/30/01</td>\n",
+       "      <td>9/30/01</td>\n",
        "      <td>1.2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -301,14 +123,14 @@
       ],
       "text/plain": [
        "       Date  Data\n",
-       "0   6/30/02   3.6\n",
-       "1   3/31/02   3.1\n",
-       "2  12/31/01   2.6\n",
-       "3   9/30/01   2.0\n",
-       "4   6/30/01   1.2"
+       "0   9/30/02   3.9\n",
+       "1   6/30/02   3.0\n",
+       "2   3/31/02   2.7\n",
+       "3  12/31/01   2.8\n",
+       "4   9/30/01   1.2"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
